# cim-agent-claude

./: .env.example  .envrc  .gitignore  .mcp.json  ARCHITECTURE-REFACTOR.md  CLAUDE.md  CLAUDE_API_SETUP.md  Cargo.toml  DELL-7750-NIX-EVALUATION-REPORT.md  ENABLED_FEATURES.md  NATS_CORRELATION_FIX.md  README.md  SAGE-SERVICE.md  SAGE_IMPLEMENTATION_COMPLETE.md  SETUP_END_TO_END.md  USER-STORIES.md  VALIDATION_SUMMARY.md  claude-adapter-cim-graph.yaml  flake.nix  implementation-guide.md  justfile  readme.md  result  rust-toolchain.toml  sage-orchestration.bdd.md  test-correlation-fix.sh  test-integration.sh  test-providers-json.sh  test-providers.sh
.claude/: CLAUDE.md  instructions.md
.cursor/: mcp.json
.sage/: CONSCIOUSNESS.md  GENESIS.md  MEMORY.md  README.md  git-hash  repo-url  shell-activation.sh
assets/: readme.md
bootable/: readme.md
cim-claude-adapter/: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  PRODUCTION-DEPLOYMENT.md  README.md  cim-expert-config.toml  claude-adapter.bdd.md  flake-production.nix  flake.nix  result
cim-claude-adapter/.claude/: commands.md  instructions.md
cim-claude-adapter/.claude/agents/: elm-architecture-expert.md  sage.md
cim-claude-adapter/docs/: API.md  CIM_EXPERT_MODULE.md  DESIGN.md  SERVICE_INSTALLATION.md  TEA_ECS_GUI_INTEGRATION.md  USER_GUIDE.md  VERSION_MANAGEMENT.md  architecture-overview.md  user-stories.md
cim-claude-adapter/examples/: README.md  api_key_usage.rs  cim_expert_demo.rs  cognitive_cim_expert_demo.rs  simple_claude_client.rs  simple_spongebob_demo.rs  working_claude_conversation.rs
cim-claude-adapter/nats-cluster/: README.md  cluster-config.yaml  docker-compose.yaml  node-1-config.conf  node-2-config.conf  node-3-config.conf
cim-claude-adapter/nats-cluster/monitoring/: prometheus.yml
cim-claude-adapter/nats-cluster/monitoring/grafana/dashboards/: nats-cluster-dashboard.json
cim-claude-adapter/nats-cluster/monitoring/grafana/datasources/: prometheus.yml
cim-claude-adapter/nats-cluster/monitoring/rules/: nats-alerts.yml
cim-claude-adapter/nats-cluster/scripts/: cluster-management.sh  health-check.sh  setup-cluster.sh
cim-claude-adapter/nix/: README.md  backup-restore.nix  cim-claude-adapter.md  cim-expert-service.nix  high-availability.nix  module.nix  monitoring.nix  nats-infrastructure.nix  network-topology.nix  security-hardening.nix  test-integration.nix
cim-claude-adapter/scripts/: check-api-version.sh
cim-claude-adapter/src/: client.rs  domain.rs  error.rs  lib.rs  main.rs
cim-claude-adapter/src/adapters/: claude_api_adapter.rs  memory_state_adapter.rs  mod.rs  nats_adapter.rs
cim-claude-adapter/src/application/: cim_expert_service.rs  claude_adapter_service.rs  conversation_service.rs  mod.rs
cim-claude-adapter/src/bridge/: bridge.rs  commands.rs  entities.rs  events.rs  mod.rs  sync.rs  systems.rs
cim-claude-adapter/src/domain/: claude_api.rs  claude_commands.rs  claude_events.rs  claude_queries.rs  commands.rs  configuration.rs  conversation_aggregate.rs  errors.rs  events.rs  mcp_tools.rs  mod.rs  value_objects.rs
cim-claude-adapter/src/gui/: app.rs  error_boundary.rs  messages.rs  mod.rs  nats_client.rs  subscriptions.rs  views.rs
cim-claude-adapter/src/infrastructure/: claude_client.rs  config.rs  mod.rs  nats_client.rs  nats_config.rs  nats_production.rs  subjects.rs
cim-claude-adapter/src/ports/: claude_api_port.rs  conversation_port.rs  mod.rs
cim-claude-adapter/static/: index.html
cim-claude-adapter/templates/kubernetes/: deployment.yaml
cim-claude-adapter/templates/monitoring/: grafana-dashboard.json
cim-claude-adapter/templates/production/: flake.nix
cim-claude-adapter/tests/: claude_client_tests.rs  domain_tests.rs  error_tests.rs  nats_integration_tests.rs  user_story_tests.rs
cim-claude-gui/: Cargo.toml  MESSAGE_RENDERING_IMPLEMENTATION.md  gui-interface.bdd.md
cim-claude-gui/assets/: index.html  styles.css
cim-claude-gui/src/: app.rs  lib.rs  main.rs  messages.rs  mod.rs  nats_client.rs  nats_client_fixed.rs  nats_integration.rs  nats_websocket.rs  sage_client.rs  tests.rs  universal_app.rs  views.rs  wasm_types.rs
cim-llm-adapter/: Cargo.toml  providers.toml
cim-llm-adapter/src/: config.rs  dialog.rs  error.rs  events.rs  lib.rs  sage_integration.rs
cim-llm-adapter/src/providers/: claude.rs  mod.rs  ollama.rs  openai.rs
cim-llm-adapter/tests/: integration_test.rs
claude-adapter/: hexagonal_architecture_summary.md
compute/: readme.md
doc/: FLAKE.nix.md  GPTs.md  color.md  sound.md
docs/: CONVERSATION_STATE_MACHINE.md  claude-api-comprehensive-design.md  index.md
domain/: readme.md
examples/: nats-s3-backup-config.nix  nats-s3-bridge.go  nats-s3fs-config.nix
hosts/: default.nix  readme.md
instructions/: cim-git-repository-domains.md
modules/: default.nix  readme.md
nats-infrastructure/: README.md  consumer-config.yml  jetstream-config.yml  kv-store-config.yml  monitoring-config.yml  security-config.yml  subject-hierarchy.yml
network/: network.yaml  readme.md
nix/: README.md  example-configuration.nix  example-full-configuration.nix  module.nix
sage-standalone-test/: Cargo.toml  claude-integration-demo.md  domain-demo.rs  quick-domain-test.rs  test-with-claude.sh  test_client.rs
sage-standalone-test/src/: main.rs
scripts/: claude-code-wrapper.sh  fetch_latest_cursor.sh  fix-nix-serve-permissions.sh  generate-nix-signing-key.sh  get_cursor_download.sh  install-sage-service.sh  load-api-key.sh  load-claude-api-key.sh  run-gui-with-sage.sh  run-llm-adapter.sh  show_latest_cursor_url.sh  start-llm-adapter-service.sh  start-sage-service.sh  start-universal-agent-system.sh  test-claude-integration.sh  test-llm-adapter.sh  test-multi-provider.sh  test-universal-agent-system.sh
shells/: readme.md
simple-claude-adapter/: Cargo.toml  NIXOS.md  README.md  SERVICE.md  TESTING.md  claude-adapter.service  flake.nix  install-service.sh  module.nix  test-commands.sh  test-real-claude.sh  test-service.sh
simple-claude-adapter/src/: main.rs
src/: agent_loader.rs  lib.rs  main.rs  (+2 more)
(+222 files in other folders)
