[workspace]
members = [
    "cim-claude-adapter",
    "cim-claude-gui",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-nats = "0.42"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"