[package]
name = "cim-agent-claude"
version = "0.1.0"
edition = "2021"
description = "CIM Agent Claude - Event-driven Claude AI integration using NATS"
license = "MIT"
repository = "https://github.com/TheCowboyAI/cim-agent-claude"

[[bin]]
name = "cim-agent-claude"
path = "src/main.rs"

[[bin]]
name = "sage"
path = "src/bin/sage.rs"

[[bin]]
name = "sage-service"
path = "src/bin/sage_service.rs"

[[bin]]
name = "sage-test"
path = "src/bin/sage_test.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
# Additional dependencies
sha2 = "0.10"
serde_yaml = "0.9"
hex = "0.4"
cim-graph = { git = "https://github.com/thecowboyai/cim-graph.git" }
cim-domain = { git = "https://github.com/thecowboyai/cim-domain.git" }
# SAGE executable dependencies
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
# Test dependencies for integration tests
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.10"
assert_matches = "1.5"

[workspace]
members = [
    ".",
    "cim-claude-adapter",
    "cim-claude-gui",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-nats = "0.42"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }