[package]
name = "cim-claude-adapter"
version = "0.1.0"
edition = "2021"
description = "CIM hexagonal adapter for Claude API to NATS translation"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# NATS integration
async-nats = "0.33"
bytes = "1.0"

# HTTP and Claude API client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
thiserror = "1.0"
anyhow = "1.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-prometheus = "0.6"

# Configuration
config = "0.14"

# Rate limiting and circuit breaking
governor = "0.6"
failsafe = "1.0"

[dev-dependencies]
tempfile = "3.0"
testcontainers = "0.15"
serial_test = "3.0"