[package]
name = "cim-claude-adapter"
version = "0.1.0"
edition = "2021"
description = "Pure Claude API adapter for CIM systems"
license = "MIT"
repository = "https://github.com/TheCowboyAI/cim-agent-claude"

[dependencies]
# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
testcontainers = "0.15"
serial_test = "3.0"
md5 = "0.7"