[package]
name = "cim-claude-gui"
version = "0.1.0"
edition = "2021"
description = "CIM Claude GUI Manager - Iced-based management interface for Claude conversations via NATS"

[[bin]]
name = "cim-claude-gui"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "cim-claude-gui-wasm"
path = "src/bin/wasm-gui.rs"
required-features = ["wasm"]

[dependencies]
# CIM Claude Adapter dependency (native only)
cim-claude-adapter = { path = "../cim-claude-adapter", features = ["native"], optional = true }

# Core async runtime (native only)
tokio = { version = "1.47", features = ["full"], optional = true }
async-trait = "0.1"
futures = "0.3"

# NATS integration (native only)
async-nats = { version = "0.42", optional = true }
bytes = "1.0"

# GUI with Iced (TEA architecture for NATS-driven management) 
iced = { version = "0.13.1", features = ["advanced", "async-std", "canvas", "debug", "image", "lazy", "markdown", "multi-window", "svg", "system", "web-colors"] }
iced_modern_theme = "0.1.6"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
  "BinaryType",
  "Blob",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"
wasm-streams = "0.3"

[features]
default = ["native"]
native = ["tokio", "async-nats", "cim-claude-adapter"]
wasm = []