[package]
name = "sage-standalone-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sage-standalone-test"
path = "src/main.rs"

[[bin]]
name = "test-client"
path = "test_client.rs"

[[bin]]
name = "domain-test"
path = "quick-domain-test.rs"

[workspace]

[dependencies]
tokio = { version = "1.47", features = ["full"] }
async-nats = "0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
# Use existing Claude adapter instead of direct API calls
cim-claude-adapter = { path = "../cim-claude-adapter" }